# OpenCentauri

./: 404.html  CNAME  index.html  mkdocs.yml
camera-led-bridge/: Cargo.toml
camera-led-bridge/src/: main.rs
docs/: extra.css  index.md
docs/extras/: cc1_update_decrypt.html
docs/hardware/CC1/: CANVAS.md  bed.md  camera.md  documentation.md  emmc-tapping.md  index.md  mainboard.md  misc.md  screen.md  toolhead.md
docs/hardware/CC2/: CANVAS.md  documentation.md  index.md  mainboard.md  misc.md  screen.md  toolhead.md
docs/klipper-conversion/: index.md
docs/mods/: machine_mods.md  optimized_parts.md  printable_mods.md
docs/patched-firmware/: index.md  modified_start_end_machine_gcode.md
docs/software/: FEL-mode.md  api.md  custom-gcode.md  embedded-firmware.md  index.md  partitions.md  updates-cc2.md  updates.md
extras/: cc2_update_decrypt.html
hardware/CC1/: index.html
hardware/CC2/: index.html
klipper-conversion/: index.html
klipper-conversion/klipper-via-mainboard-replacement/: index.html
mcu-flasher/: Cargo.toml
mcu-flasher/src/: main.rs  ymodem.rs
mods/light_mods/: index.html
mods/machine_mods/: index.html
mods/optimized_parts/: index.html
mods/printable_mods/: index.html
patched-firmware/: index.html
patched-firmware/modified_start_end_machine_gcode/: index.html
software/: index.html
software/FEL-mode/: index.html
software/api/: index.html
software/custom-gcode/: index.html
software/embedded-firmware/: index.html
software/partitions/: index.html
software/updates/: index.html
software/updates-cc2/: index.html
(+24 files in other folders)
